@@ -23,7 +23,7 @@ DISTCHECK_CONFIGURE_FLAGS = --host=i586-mingw32msvc --build=i686-pc-linux-gnu \
 EXTRA_DIST = autogen.sh
 
 
-SUBDIRS = src po m4 doc
+SUBDIRS = src forms po m4 doc
 
 dist-hook:
 	echo "$(VERSION)" > $(distdir)/VERSION
